# hsircd

./: README.md  hsircd.cabal  run-all-tests.sh  run-integration-tests.sh
main/: Main.hs
src/: Commands.hs  Config.hs  Database.hs  Main.hs  Parser.hs  Server.hs
src/Model/: Channel.hs  Command.hs  Encoding.hs  Message.hs  MessageTo.hs  Prefix.hs  RawMessage.hs  User.hs
tests/: IntegrationTest.hs  TestParser.hs  TestSuite.hs
tests/Model/: TestChannel.hs  TestCommand.hs
