name:              hsircd
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.8

library
  hs-source-dirs:  src
  build-depends:   base
                 , parsec
                 , text
                 , network
                 , stm
                 , containers
  exposed-modules: Database
                 , Model.Channel
                 , Model.Command
                 , Model.Encoding
                 , Model.Message
                 , Model.Prefix
                 , Model.User
                 , Parser
                 , Server

executable hsircd
  main-is:         Main.hs
  hs-source-dirs:  main
  build-depends:   base
                 , hsircd

test-suite hsircd-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           TestSuite.hs
  build-depends:     base
                   , HUnit
                   , tasty
                   , tasty-hunit
                   , parsec
                   , hsircd
