name:              hsircd
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.8

library
  hs-source-dirs:  src
  ghc-options:     -Wall
  build-depends:   base
                 , parsec
                 , text
                 , network
                 , stm
                 , containers
                 , syb
  exposed-modules: Database
                 , Model.Channel
                 , Model.Command
                 , Model.Encoding
                 , Model.Message
                 , Model.Prefix
                 , Model.User
                 , Parser
                 , Server

executable hsircd
  main-is:         Main.hs
  ghc-options:     -Wall -threaded
  hs-source-dirs:  main
  build-depends:   base
                 , hsircd

executable integration-test
  main-is:         IntegrationTest.hs
  ghc-options:     -Wall -threaded -rtsopts
  hs-source-dirs:  tests
  build-depends:   base
                 , network
                 , parallel-io


test-suite hsircd-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           TestSuite.hs
  ghc-options:       -Wall
  build-depends:     base
                   , HUnit
                   , tasty
                   , tasty-hunit
                   , parsec
                   , hsircd
